@startuml

title __POGODA's Class Diagram__\n

  namespace  {
    namespace om.example.pogoda {
      class com.example.pogoda.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.pogoda {
      class com.example.pogoda.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.pogoda {
      class com.example.pogoda.ObjectWeatherHistory {
      }
    }
  }
  

  com.example.pogoda.HelloApplication -up-|> javafx.application.Application
  com.example.pogoda.HelloController -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
